@@ -23,7 +23,6 @@ import java.util.List;
 
 import org.easymock.EasyMock;
 import org.easymock.IMocksControl;
-import org.easymock.classextension.MockClassControl;
 
 
 /**
@@ -38,6 +37,10 @@ public class EasyMockHelper {
    List<IMocksControl> mockControls = new ArrayList<IMocksControl>(); 
    
    public <T> T createMock(Class<T> mockClass) {
+      return createMock(null, mockClass);
+   }
+
+   public <T> T createMock(String name, Class<T> mockClass) {
       IMocksControl control = null;
       if (mockClass.isInterface()) {
          // an interface
@@ -48,9 +51,14 @@ public class EasyMockHelper {
       }
       
       mockControls.add(control);
-      return control.createMock(mockClass);
+      if (name != null) {
+      	return control.createMock(name, mockClass);
+      } else {
+      	return control.createMock(mockClass);
+      }
    }
-
+   
+   
    public void replayAll() {
       for (IMocksControl control : mockControls) {
          control.replay();
